--- a/web/.env.example
+++ b/web/.env.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_abcdefghijklmnopqrstuvwxyz
 CLERK_SECRET_KEY=sk_test_abcdefghijklmnopqrstuvwxyz
+NEXT_PUBLIC_API_URL=http://localhost:8080/api/v1
