feat: add seed-ideas target to Makefile and implement seed script for generating ideas

--- a/api/Makefile
+++ b/api/Makefile
@@ -1,4 +1,10 @@
-.PHONY: reset-db
+.PHONY: reset-db seed-ideas
 
 reset-db:
 	@./scripts/reset-db.sh
+
+seed-ideas:
+	@echo "Seeding ideas..."
+	@go run ./scripts/seed.go
+	@echo "Ideas seeded successfully."
+	@echo "You can now run the server and test the API."
