feat: Implement WebSocket activity broadcasting and recent activity retrieval
- Added ActivityBroadcaster interface and hubBroadcaster implementation for broadcasting user activities via WebSocket.
- Created Client struct to manage WebSocket connections and handle message reading/writing.
- Implemented Hub to manage active WebSocket clients and facilitate broadcasting messages to specific users.
- Introduced ServeWs function to handle WebSocket connections and authenticate users.
- Added GetRecentActivityForUser method in DashboardService to fetch recent user activities.
- Updated DashboardHandler to include endpoint for retrieving recent activity.
- Refactored feedback service to utilize WebSocket broadcasting for new feedback events.
- Enhanced middleware for improved error handling and logging.
- Updated router to register new recent activity route.
- Cleaned up unused code and comments across various files.

--- a/api/.env.example
+++ b/api/.env.example
@@ -9,3 +9,4 @@ DBHost=localhost
 DBPort=5432
 
 CLERK_JWKS_URL=https://clerk.YOUR_INSTANCE.clerk.accounts.dev/.well-known/jwks.json
+APP_ENV=development
