fix: Update author information in AUTHOR.txt and package.json

--- a/web/package.json
+++ b/web/package.json
@@ -53,8 +53,8 @@
     "typescript": "^5"
   },
   "author": {
-    "name": "JealousGx123",
-    "url": "https://jealous123.dev"
+    "name": "JealousGx",
+    "url": "https://jealous.dev"
   },
   "license": "MIT",
   "repository": {
