--- a/web/.env.example
+++ b/web/.env.example
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_abcdefghijklmnopqrstuvwxyz
 CLERK_SECRET_KEY=sk_test_abcdefghijklmnopqrstuvwxyz
-NEXT_PUBLIC_API_URL=http://localhost:8080/api/v1
-NEXT_PUBLIC_WS_URL=ws://localhost:8080/ws
+NEXT_PUBLIC_API_URL=http://api:8080/api/v1 # change to http://localhost:8080/api/v1 if running locally (api is the name of the service in docker-compose)
+NEXT_PUBLIC_WS_URL=ws://api:8080/ws # change to ws://localhost:8080/ws if running locally
