fix: correct property name for JSX bracket same line in Prettier configuration

--- a/web/.prettierrc.json
+++ b/web/.prettierrc.json
@@ -7,7 +7,7 @@
   "arrowParens": "always",
   "bracketSpacing": true,
   "endOfLine": "lf",
-  "jsxBracketSameLine": false,
+  "bracketSameLine": false,
   "jsxSingleQuote": false,
   "quoteProps": "as-needed",
   "useTabs": false
