--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,16 +1,21 @@
-FROM golang:1.24-alpine
+FROM golang:1.24-alpine AS builder
 
 WORKDIR /app
-
-# Air for hot reloading
-RUN go install github.com/air-verse/air@latest
 
 COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
 
+ENV CGO_ENABLED=0 GOOS=linux
+RUN go build -o api ./cmd/server
+
+FROM alpine:latest
+
+WORKDIR /app
+
+COPY --from=builder /app/api .
+
 EXPOSE 8080
 
-# Use Air for hot reload in development
-CMD ["air"]
+CMD ["./api"]
