Implement user management with Clerk integration, including user repository, service, and webhook handling

--- a/api/.env.example
+++ b/api/.env.example
@@ -9,4 +9,5 @@ DBHost=localhost
 DBPort=5432
 
 CLERK_JWKS_URL=https://clerk.YOUR_INSTANCE.clerk.accounts.dev/.well-known/jwks.json
+CLERK_WEBHOOK_SECRET=whsec_abcdefghijklmnopqrstuvwxyz
 APP_ENV=development
