Add new icons and images for pricing tiers and product plans
- Added SVG icons for basic, free, and pro pricing tiers.
- Included PNG images for base, free, and pro plans.
- Added a new webp image for the home hero section.

--- a/web/.env.example
+++ b/web/.env.example
@@ -6,3 +6,5 @@ NEXT_PUBLIC_WS_URL=ws://localhost:8080/ws # no need to change this as the websoc
 PADDLE_API_KEY=pdl_sdbx_apikey_abcd
 NEXT_PUBLIC_PADDLE_CLIENT_TOKEN=test_abcde
 NEXT_PUBLIC_PADDLE_ENV=sandbox # or `production`
+
+NEXT_PUBLIC_APP_URL=http://localhost:3000
