Enhance user management and integrate pricing features (#10)

--- a/web/.env.example
+++ b/web/.env.example
@@ -2,3 +2,9 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_abcdefghijklmnopqrstuvwxyz
 CLERK_SECRET_KEY=sk_test_abcdefghijklmnopqrstuvwxyz
 NEXT_PUBLIC_API_URL=http://api:8080/api/v1 # change to http://localhost:8080/api/v1 if running locally (api is the name of the service in docker-compose)
 NEXT_PUBLIC_WS_URL=ws://localhost:8080/ws # no need to change this as the websocket runs on the browser, so, it will be localhost.
+
+PADDLE_API_KEY=pdl_sdbx_apikey_abcd
+NEXT_PUBLIC_PADDLE_CLIENT_TOKEN=test_abcde
+NEXT_PUBLIC_PADDLE_ENV=sandbox # or `production`
+
+NEXT_PUBLIC_APP_URL=http://localhost:3000
