--- a/api/.env.example
+++ b/api/.env.example
@@ -9,4 +9,10 @@ DBHost=localhost
 DBPort=5432
 
 CLERK_JWKS_URL=https://clerk.YOUR_INSTANCE.clerk.accounts.dev/.well-known/jwks.json
+CLERK_WEBHOOK_SECRET=whsec_abcdefghijklmnopqrstuvwxyz
+
+PADDLE_API_KEY=pdl_sdbx_apikey_abcd
+PADDLE_BASE_URL=https://sandbox-vendors.paddle.com # https://api.paddle.com for production
+PADDLE_WEBHOOK_SECRET=pdl_abcd_abcd
+
 APP_ENV=development
