--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
     "@hookform/resolvers": "^5.0.1",
+    "@paddle/paddle-js": "^1.4.1",
+    "@paddle/paddle-node-sdk": "^2.7.3",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.13",
