--- a/web/package.json
+++ b/web/package.json
@@ -47,6 +47,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.3",
     "recharts": "^2.15.3",
     "server-only": "^0.0.1",
