--- a/web/.env.example
+++ b/web/.env.example
@@ -8,3 +8,9 @@ NEXT_PUBLIC_PADDLE_CLIENT_TOKEN=test_abcde
 NEXT_PUBLIC_PADDLE_ENV=sandbox # or `production`
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+R2_ACCOUNT_ID=
+R2_ACCESS_KEY_ID=
+R2_SECRET_ACCESS_KEY=
+R2_BUCKET=
+NEXT_PUBLIC_R2_ENDPOINT=
