--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.832.0",
+    "@aws-sdk/s3-request-presigner": "^3.832.0",
     "@clerk/nextjs": "^6.18.5",
     "@grapesjs/react": "^2.0.0",
     "@hookform/resolvers": "^5.0.1",
