feat: Implement AI content generation service
- Added AIGenerate request DTO for AI prompts.
- Created AI package with generator interface and AIGenerator struct.
- Implemented Gemini generator for AI content generation using the GenAI client.
- Developed landing page prompt template and associated data structure.
- Integrated AI service into the idea service for generating landing page content.
- Added HTTP handler for AI content generation endpoint.
- Updated router to include AI generation route.

--- a/api/.env.example
+++ b/api/.env.example
@@ -15,4 +15,7 @@ PADDLE_API_KEY=pdl_sdbx_apikey_abcd
 PADDLE_BASE_URL=https://sandbox-vendors.paddle.com # https://api.paddle.com for production
 PADDLE_WEBHOOK_SECRET=pdl_abcd_abcd
 
+GEMINI_API_KEY=your-gemini-api-key
+GEMINI_MODEL_CODE=gemini-2.5-flash
+
 APP_ENV=development
