--- a/api/.env.example
+++ b/api/.env.example
@@ -14,6 +14,9 @@ CLERK_WEBHOOK_SECRET=whsec_abcdefghijklmnopqrstuvwxyz
 PADDLE_API_KEY=pdl_sdbx_apikey_abcd
 PADDLE_BASE_URL=https://sandbox-vendors.paddle.com # https://api.paddle.com for production
 PADDLE_WEBHOOK_SECRET=pdl_abcd_abcd
+PADDLE_STARTER_PLAN_ID=pro_01jxsajk7xj3q08agx72evgfey
+PADDLE_PRO_PLAN_ID=pro_01jxs1w0n3tax383gmf3ahb118
+PADDLE_BUSINESS_PLAN_ID=pro_01jxs20dwtgtc0ywy6erm4gjxj
 
 GEMINI_API_KEY=your-gemini-api-key
 GEMINI_MODEL_CODE=gemini-2.5-flash
