--- a/api/.env.example
+++ b/api/.env.example
@@ -21,4 +21,6 @@ PADDLE_BUSINESS_PLAN_ID=pro_01jxs20dwtgtc0ywy6erm4gjxj
 GEMINI_API_KEY=your-gemini-api-key
 GEMINI_MODEL_CODE=gemini-2.5-flash
 
+DISCORD_WEBHOOK_URL=asdknasd
+
 APP_ENV=development
