feat: add user repository to Reddit validation service for enhanced user checks

--- a/api/.env.example
+++ b/api/.env.example
@@ -20,6 +20,7 @@ PADDLE_BUSINESS_PLAN_ID=pro_01jxs20dwtgtc0ywy6erm4gjxj
 
 GEMINI_API_KEY=your-gemini-api-key
 GEMINI_MODEL_CODE=gemini-2.5-flash
+GEMINI_EMBEDDING_MODEL_CODE=text-embedding-004
 
 DISCORD_WEBHOOK_URL=asdknasd
 
