Implement IP rate limiting middleware and update environment configuration

--- a/api/.env.example
+++ b/api/.env.example
@@ -25,3 +25,6 @@ GEMINI_EMBEDDING_MODEL_CODE=text-embedding-004
 DISCORD_WEBHOOK_URL=asdknasd
 
 APP_ENV=development
+
+RATE_LIMITER_RATE=20
+RATE_LIMITER_BURST=40
