Update Paddle pricing tiers to use environment variables for price IDs

--- a/web/.env.example
+++ b/web/.env.example
@@ -7,6 +7,15 @@ PADDLE_API_KEY=pdl_sdbx_apikey_abcd
 NEXT_PUBLIC_PADDLE_CLIENT_TOKEN=test_abcde
 NEXT_PUBLIC_PADDLE_ENV=sandbox # or `production`
 
+NEXT_PUBLIC_PADDLE_STARTER_MONTHLY_PRICE_ID=pri_01jxsak6mag9h4zck3qtbfggdb
+NEXT_PUBLIC_PADDLE_STARTER_YEARLY_PRICE_ID=pri_01jxsakjxktpp3pcma1es34ekt
+
+NEXT_PUBLIC_PADDLE_PRO_MONTHLY_PRICE_ID=pri_01jxs1zskp3ak022rvzffz2w9v
+NEXT_PUBLIC_PADDLE_PRO_YEARLY_PRICE_ID=pri_01jxs25f8xpw1de606r19kh30v
+
+NEXT_PUBLIC_PADDLE_BUSINESS_MONTHLY_PRICE_ID=pri_01jxs21datfz4zvxg5bnww2xna
+NEXT_PUBLIC_PADDLE_BUSINESS_YEARLY_PRICE_ID=pri_01jxs247senyyv1yc68cvqfmnc
+
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 R2_ACCOUNT_ID=
