--- a/web/.env.example
+++ b/web/.env.example
@@ -16,6 +16,8 @@ NEXT_PUBLIC_PADDLE_PRO_YEARLY_PRICE_ID=pri_01jxs25f8xpw1de606r19kh30v
 NEXT_PUBLIC_PADDLE_BUSINESS_MONTHLY_PRICE_ID=pri_01jxs21datfz4zvxg5bnww2xna
 NEXT_PUBLIC_PADDLE_BUSINESS_YEARLY_PRICE_ID=pri_01jxs247senyyv1yc68cvqfmnc
 
+NEXT_PUBLIC_PADDLE_DISCOUNT_ID=dsc_01jxs29phfhxzjph1her6x6q12
+
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 R2_ACCOUNT_ID=
