feat: add sample Reddit validation endpoint and configuration

--- a/api/.env.example
+++ b/api/.env.example
@@ -23,6 +23,7 @@ GEMINI_MODEL_CODE=gemini-2.5-flash
 GEMINI_EMBEDDING_MODEL_CODE=text-embedding-004
 
 DISCORD_WEBHOOK_URL=asdknasd
+SAMPLE_REDDIT_VALIDATION_ID=c52af4c0-28f5-45ad-bfa2-eba8e437b3ba
 
 APP_ENV=development
 
