--- a/web/.env.example
+++ b/web/.env.example
@@ -19,9 +19,13 @@ NEXT_PUBLIC_PADDLE_BUSINESS_YEARLY_PRICE_ID=pri_01jxs247senyyv1yc68cvqfmnc
 NEXT_PUBLIC_PADDLE_DISCOUNT_ID=dsc_01jxs29phfhxzjph1her6x6q12
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+NODE_ENV=test # test for local, production for production, development for development / staging
 
 R2_ACCOUNT_ID=
 R2_ACCESS_KEY_ID=
 R2_SECRET_ACCESS_KEY=
 R2_BUCKET=
 NEXT_PUBLIC_R2_ENDPOINT=
+
+CLOUDFLARE_ZONE_ID=
+CLOUDFLARE_API_TOKEN=
