--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@clerk/nextjs": "^6.18.5",
     "@grapesjs/react": "^2.0.0",
     "@hookform/resolvers": "^5.0.1",
+    "@next/third-parties": "^15.4.1",
     "@paddle/paddle-js": "^1.4.1",
     "@paddle/paddle-node-sdk": "^2.7.3",
     "@radix-ui/react-accordion": "^1.2.11",
