--- a/web/.env.example
+++ b/web/.env.example
@@ -19,7 +19,7 @@ NEXT_PUBLIC_PADDLE_BUSINESS_YEARLY_PRICE_ID=pri_01jxs247senyyv1yc68cvqfmnc
 NEXT_PUBLIC_PADDLE_DISCOUNT_ID=dsc_01jxs29phfhxzjph1her6x6q12
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-NODE_ENV=test # test for local, production for production, development for development / staging
+ENVIRONMENT=local # local for local, no need for dev, prod
 
 R2_ACCOUNT_ID=
 R2_ACCESS_KEY_ID=
