Add Discord webhooks for content reports, bug reports, and feature suggestions; implement feature request submission

--- a/api/.env.example
+++ b/api/.env.example
@@ -29,3 +29,8 @@ APP_ENV=development
 
 RATE_LIMITER_RATE=20
 RATE_LIMITER_BURST=40
+
+
+DISCORD_CONTENT_REPORT_WEBHOOK_URL=
+DISCORD_BUG_REPORT_WEBHOOK_URL=
+DISCORD_FEATURE_SUGGESTIONS_WEBHOOK_URL=
