--- a/web/.env.example
+++ b/web/.env.example
@@ -29,3 +29,7 @@ NEXT_PUBLIC_R2_ENDPOINT=
 
 CLOUDFLARE_ZONE_ID=
 CLOUDFLARE_API_TOKEN=
+
+FF_ENABLE_DISCOUNT_ANNOUNCEMENT=true
+FF_ANNOUNCEMENT_COUPON_CODE="FS100"
+FF_ANNOUNCEMENT_COUPON_ID=dsc_023abcd
