Add starter plan idea creation days configuration

--- a/api/.env.example
+++ b/api/.env.example
@@ -24,6 +24,8 @@ GEMINI_EMBEDDING_MODEL_CODE=text-embedding-004
 
 SAMPLE_REDDIT_VALIDATION_ID=c52af4c0-28f5-45ad-bfa2-eba8e437b3ba
 
+STARTER_PLAN_IDEA_CREATION_DAYS=3
+
 APP_ENV=development
 
 RATE_LIMITER_RATE=20
