feat: Enhance MVP generation process with AI and Cloudflare R2 integration
- Added new fields for MetaTitle and MetaDescription in GenerateLandingPage request.
- Implemented R2Bucket interface for Cloudflare R2 storage operations.
- Created HTML validation logic to ensure generated landing pages meet requirements.
- Introduced GenerateAndSave method in MVPService to handle asynchronous MVP generation.
- Updated MVPHandler to initiate landing page generation and provide user feedback.
- Enhanced activity feed to display notifications for MVP generation status.
- Integrated activity context to manage and display user notifications effectively.
- Updated landing page prompt template to refine generation instructions.
- Improved UI components to reflect new MVP generation features and user interactions.

--- a/api/.env.example
+++ b/api/.env.example
@@ -22,6 +22,17 @@ GEMINI_API_KEY=your-gemini-api-key
 GEMINI_MODEL_CODE=gemini-2.5-flash
 GEMINI_EMBEDDING_MODEL_CODE=text-embedding-004
 
+TAILWIND_CSS_URL=https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css
+CTA_BUTTON_ID="ctaButton"
+APP_URL="http://localhost:3000"
+SCROLL_DEBOUNCE_MS=250
+
+CLOUDFLARE_R2_BUCKET_NAME="foundersignal"
+CLOUDFLARE_R2_ACCOUNT_ID="your-account-id"
+CLOUDFLARE_R2_ACCESS_KEY_ID="your-access-key-id"
+CLOUDFLARE_R2_ACCESS_KEY_SECRET="your-access-key-secret"
+CLOUDFLARE_R2_BUCKET_PUBLIC_URL="https://your-account-id.r2.cloudflarestorage.com/foundersignal"
+
 SAMPLE_REDDIT_VALIDATION_ID=c52af4c0-28f5-45ad-bfa2-eba8e437b3ba
 
 STARTER_PLAN_IDEA_CREATION_DAYS=3
